# eduflowgl

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
CMakeMacros/Cuda/: Link.cmake
CMakeMacros/Environment/MachineFiles/: .gitignore  TEMPLATE
CMakeMacros/OpenGL/: Link.cmake
CMakeMacros/Qt/: Link.cmake
CMakeMacros/general/: CopyDll.cmake
application/Interactive-LBM-GPGPU/: 3rdPartyLinking.cmake  CMakeLists.txt  main.cpp
application/Interactive-LBM-GPGPU/resources/: fragment-shader.txt
application/Interactive-LBM-GPGPU/src/: Command.h  Commands.cpp  Commands.h  LBMKernels.cu  LBMKernels.cuh  LBMSolver.cu  LBMSolver.h  ReadSolidGeometryCommand.cpp  ReadSolidGeometryCommand.h  Test.cpp  Visualizer.cpp  colorMap.cu  colorMap.cuh  visualizer.h  writeFlowFieldToVTKCommand.cpp  writeFlowFieldToVTKCommand.h
application/Interactive-LBM-GPGPU/src/Utility/: CarGeometry.h  StopWatch.cpp
application/Interactive-LBM-GPGPU/src/commands/: DrawCommand.cpp  DrawCommand.h  ReadSolidGeometryCommand.cpp  ReadSolidGeometryCommand.h  writeFlowFieldToVTKCommand.cpp  writeFlowFieldToVTKCommand.h
application/Interactive-LBM-GPGPU/src/tests/: Test.cpp  Test.h
application/InteractiveGlut/: 3rdPartyLinking.cmake  CMakeLists.txt  Visualizer.cpp  colorMap.cu  lbm.cu  lbm.h  lbmKernels.cuh  main.cpp  visualizer.h
application/InteractiveOpenGL/: CMakeLists.txt  main.cpp
application/InteractiveOpenGL/resources/: vertex-shader.txt
application/InteractiveOpenGL/src/: LBMKernels.cu  LBMKernels.cuh  LBMSolver.cu  LBMSolver.h  Visualizer.cpp  visualizer.h
application/tutorial/: 3rdPartyLinking.cmake  CMakeLists.txt  cudaKernel.cu  cudaKernel.h  main.cpp
application/tutorial/Utility/: NacaProfile.h  StopWatch.h
application/tutorial/resources/: fragment-shader.txt
